--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "4.7.0",
     "@storybook/preset-scss": "1.0.3",
+    "antd": "4.21.4",
     "css-loader": "6.7.1",
     "next": "12.1.6",
     "react": "18.2.0",
