--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "@ant-design/icons": "4.7.0",
     "@storybook/preset-scss": "1.0.3",
     "antd": "4.21.4",
+    "autoprefixer": "10.4.7",
     "css-loader": "6.7.1",
     "next": "12.1.6",
+    "postcss": "8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "1.53.0",
     "sass-loader": "13.0.2",
     "sb": "6.5.9",
-    "style-loader": "3.3.1"
+    "style-loader": "3.3.1",
+    "tailwindcss": "3.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
